@@ -1,8 +1,12 @@
 package Catalyst::Base;
-
-use base qw/Catalyst::Controller/;
 use Moose;
+BEGIN { extends 'Catalyst::Controller' }
 no Moose;
+
+after 'BUILD' => sub {
+    my $self = shift;
+    warn(ref($self) . " is using the deprecated Catalyst::Base, update your application as this will be removed in the next major release");
+};
 
 1;
 
@@ -15,7 +19,10 @@ Catalyst::Base - Deprecated base class
 =head1 DESCRIPTION
 
 This used to be the base class for Catalyst Controllers. It
-remains here for compatibility reasons.
+remains here for compatibility reasons, but its use is highly deprecated.
+
+If your application produces a warning, then please update your application to
+inherit from L<Catalyst::Controller> instead.
 
 =head1 SEE ALSO
 
