@@ -61,6 +61,7 @@
           This is more correct, and avoids metaclass incompatibility in complex
           cases (t0m)
           - Tests for this (t0m)
+        - Use of deprecated Catalyst::Base now warns. (t0m)
 
 5.8000_06 2009-02-04 21:00
         - Disallow writing to config after setup (rafl)
